--- a/index.html
+++ b/index.html
@@ -151,10 +151,11 @@
       <div class="license">مجوز: SIL Open Font License 1.1</div>
       <div class="notice">این فونت  در مراحل اولیه توسعه می باشد که در صورت مشاهده ایراد یا داشتن هر گونه پیشنهادی تقاضا می گردد در میان بگذارید و در توسعه قلم مشارکت فرمایید. هم اکنون می توانید از قلم استفاده نمایید اما در آینده نسخه های جدید منتشر خواهد شد. از پایگاه های دانلود فایل نیز تقاضا می گردد تا پیش از انتشار نسخه اصلی آن را بر روی سرورهای خود برای دانلود قرار ندهند.</div>
       <div class="other-fonts">سایر قلم‌های آزاد:
-           <a href="http://rastikerdar.github.io/vazir-font/" target="_blank">وزیر</a>،
-           <a href="http://rastikerdar.github.io/tanha-font/" target="_blank">تنها</a>،
-           <a href="http://rastikerdar.github.io/shabnam-font/" target="_blank">شبنم</a>،
-           <a href="http://rastikerdar.github.io/samim-font/" target="_blank">صمیم</a>
+        <a href="http://rastikerdar.github.io/vazir-font/" target="_blank">وزیر</a>،
+        <a href="http://rastikerdar.github.io/tanha-font/" target="_blank">تنها</a>،
+        <a href="http://rastikerdar.github.io/shabnam-font/" target="_blank">شبنم</a>،
+        <a href="http://rastikerdar.github.io/parastoo-font/" target="_blank">پرستو</a>،
+        <a href="http://rastikerdar.github.io/samim-font/" target="_blank">صمیم</a>
       </div>
     </header>
 
