--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
     <meta name="description" content="قلم فارسی گندم">   
     <meta name="keywords" content="فونت,فارسی,گندم,font,farsi,Gandom">
-    <link type="text/css" rel="stylesheet" href="https://cdn.rawgit.com/rastikerdar/gandom-font/v0.4.0/dist/font-face.css">
+    <link type="text/css" rel="stylesheet" href="https://cdn.rawgit.com/rastikerdar/gandom-font/v0.4.1/dist/font-face.css">
     <style>
       * {
         margin: 0;
@@ -38,7 +38,7 @@
       }
       
       header h1 {
-        color: #4e9a06;
+        color: #519600;
         font-weight: normal;
       }
       
@@ -165,12 +165,12 @@
       <h1>قلم فارسی گندم</h1>
       <div class="description">این فونت آزاد است.</div>
       <div class="get">
-        <a href="https://github.com/rastikerdar/gandom-font/releases/download/v0.4.0/gandom-font-v0.4.0.zip" class="download">دریافت (دانلود)</a>
+        <a href="https://github.com/rastikerdar/gandom-font/releases/download/v0.4.1/gandom-font-v0.4.1.zip" class="download">دریافت (دانلود)</a>
         <a href="https://github.com/rastikerdar/gandom-font" class="github">GitHub</a>
       </div>
       <div class="info">
-        <div class="version">آخرین نسخه: 0.4.0</div>
-        <div>در نسخه 0.4.0 قلم گندم با قلم لاتین Roboto Serif ترکیب شد.</div>
+        <div class="version">آخرین نسخه: 0.4.1</div>
+        <div>در نسخه 0.4.1 قلم گندم با قلم لاتین Roboto Serif ترکیب شد.</div>
         <div class="notice">این فونت مراحل توسعه پیش از انتشار اصلی را می گذراند. هم اکنون می توانید از آن استفاده نمایید اما از پایگاه های دانلود فایل تقاضا می گردد تا پیش از انتشار نسخه اصلی آن را بر روی سرورهای خود برای دانلود قرار ندهند.</div>
         <div class="license">مجوز: SIL Open Font License 1.1</div>
         <div class="other-fonts">سایر قلم‌های آزاد:
