--- a/index.html
+++ b/index.html
@@ -57,7 +57,21 @@
         color: #999;
         font-size: 12px;
       }
-                  
+
+      .infobox {
+          background-color: #fbfff4;
+          border: 1px solid #e2e2e2;
+          border-radius: 5px;
+          color: #2b4f27;
+          font-weight: normal;
+          line-height: 2;
+          margin: 15px auto;
+          max-width: 600px;
+          padding: 5px;
+          text-align: center;
+          font-size: 15px;
+      }
+
       .sample {
         text-align: center;
       }
@@ -181,6 +195,7 @@
           <a href="http://rastikerdar.github.io/samim-font/" target="_blank">صمیم</a>
         </div>
         <div>برای مقایسه قلم های فارسی به <a href="http://rastikerdar.github.io/compare-fonts/" target="_blank">این صفحه </a> مراجعه نمایید.</div>
+        <div class="infobox">نسخه‌های شامل حروف لاتین Roboto Serif، بدون حروف لاتین و تمام ارقام فارسی در بسته فشرده (zip) فونت موجود می‌باشد.</div>
       </div>
     </header>
 
