--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
     <meta name="description" content="قلم فارسی گندم">   
     <meta name="keywords" content="فونت,فارسی,گندم,font,farsi,Gandom">
-    <link type="text/css" rel="stylesheet" href="https://cdn.rawgit.com/rastikerdar/gandom-font/v0.4.1/dist/font-face.css">
+    <link type="text/css" rel="stylesheet" href="https://cdn.rawgit.com/rastikerdar/gandom-font/v0.4.2/dist/font-face.css">
     <style>
       * {
         margin: 0;
@@ -179,12 +179,12 @@
       <h1>قلم فارسی گندم</h1>
       <div class="description">این فونت آزاد است.</div>
       <div class="get">
-        <a href="https://github.com/rastikerdar/gandom-font/releases/download/v0.4.1/gandom-font-v0.4.1.zip" class="download">دریافت (دانلود)</a>
+        <a href="https://github.com/rastikerdar/gandom-font/releases/download/v0.4.2/gandom-font-v0.4.2.zip" class="download">دریافت (دانلود)</a>
         <a href="https://github.com/rastikerdar/gandom-font" class="github">GitHub</a>
       </div>
       <div class="info">
-        <div class="version">آخرین نسخه: 0.4.1</div>
-        <div>در نسخه 0.4.1 قلم گندم با قلم لاتین Roboto Serif ترکیب شد.</div>
+        <div class="version">آخرین نسخه: 0.4.2</div>
+        <div>در نسخه 0.4.0 قلم گندم با قلم لاتین Noto Serif ترکیب شد.</div>
         <div class="notice">این فونت مراحل توسعه پیش از انتشار اصلی را می گذراند. هم اکنون می توانید از آن استفاده نمایید اما از پایگاه های دانلود فایل تقاضا می گردد تا پیش از انتشار نسخه اصلی آن را بر روی سرورهای خود برای دانلود قرار ندهند.</div>
         <div class="license">مجوز: SIL Open Font License 1.1</div>
         <div class="other-fonts">سایر قلم‌های آزاد:
@@ -195,7 +195,7 @@
           <a href="http://rastikerdar.github.io/samim-font/" target="_blank">صمیم</a>
         </div>
         <div>برای مقایسه قلم های فارسی به <a href="http://rastikerdar.github.io/compare-fonts/" target="_blank">این صفحه </a> مراجعه نمایید.</div>
-        <div class="infobox">نسخه‌های شامل حروف لاتین Roboto Serif، بدون حروف لاتین و تمام ارقام فارسی در بسته فشرده (zip) فونت موجود می‌باشد.</div>
+        <div class="infobox">نسخه‌های شامل حروف لاتین Noto Serif، بدون حروف لاتین و تمام ارقام فارسی در بسته فشرده (zip) فونت موجود می‌باشد.</div>
       </div>
     </header>
 
