--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         border-bottom: 1px solid #d5d5d5;
         color: #007fba;
         margin: 0 5px;
+        font-size: 1.5em;
       }
       
       header .info{
