Add deprecation notice

--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
           <a href="http://rastikerdar.github.io/samim-font/" target="_blank">صمیم</a>
         </div>
         <div>برای مقایسه قلم های فارسی به <a href="http://rastikerdar.github.io/compare-fonts/" target="_blank">این صفحه </a> مراجعه نمایید.</div>
+        <div class="infobox">توسعه این پروژه متوقف و بایگانی شده است. این موضوع شامل تمامی ابعاد پروژه از طراحی گرافته تا رفع اشکال می‌شود. قسمت ایشوهای مخزن همچنان باز است.</div>
         <div class="infobox">نسخه‌های شامل حروف لاتین Noto Serif، بدون حروف لاتین و تمام ارقام فارسی در بسته فشرده (zip) فونت موجود می‌باشد.</div>
       </div>
     </header>
