--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
     <meta name="description" content="قلم فارسی گندم">   
     <meta name="keywords" content="فونت,فارسی,گندم,font,farsi,Gandom">
-    <link type="text/css" rel="stylesheet" href="https://cdn.rawgit.com/rastikerdar/gandom-font/v0.8/dist/font-face.css">
+    <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/rastikerdar/gandom-font@v0.8/dist/font-face.css">
     <style>
       * {
         margin: 0;
